# Mvresprint2

./: ARCHITECTURE_DESIGN.md  BASELINE_CERTIFICATION_REPORT.md  BRANCH_ANALYSIS_PHASE1.md  BRANCH_ANALYSIS_PHASE2.md  BRANCH_INTEGRATION_EXECUTIVE_REPORT.md  CODING_TECHNICAL_FRAMEWORK.md  Cargo.toml  DELIVERY_CONFIRMATION.md  ERCOT_2026_Winter_Load_Shed_Table.xlsx  HARDWARE_INTEGRATION.adoc  ISE_COMPLETE_DOCUMENTATION_INDEX.md  ISE_EXECUTIVE_BRIEFING.md  ISE_HARNESS_IMPLEMENTATION_REPORT.md  KERNEL_STATE_SNAPSHOT.md  MERGE_PLAN.md  OPERATIONAL_MANUAL.md  PERFORMANCE_REPORT.md  PILOT_BRIEF.md  PTP_SYNCHRONIZATION_AUDIT.md  Preliminary-Summer-Load-Shed-Table.xlsx  README.md  REVIEW_PACKET.md  TECHNICAL_SPECIFICATIONS.md  pilot_audit_ticket.md  rts_kani_vir.json  system-wide-demand.csv  verify_reproducibility.py
.github/workflows/: phase3-enforcement.yml  rust-ci.yml  verification.yml
artifacts/: interface_commissioning_manifest.json
crates/adversarial_runtime/: Cargo.toml
crates/kani_bindings/: Cargo.toml
crates/rts_core/: Cargo.toml
crates/rts_invariants/: Cargo.toml
crates/verification_engine/: Cargo.toml  build.rs
crates/verification_engine/src/: adversarial_generator.rs  generated.rs  kani_generator.rs  lib.rs  main.rs  runtime_bridge.rs  vir_loader.rs
docs/: ABF3_INTEGRATION.md  APPENDIX_A.md  DETERMINISTIC_IMPLEMENTATION_CHECKLIST.md  ERCOT_READINESS_CHECKLIST.md  NCR001_FRESH_BUILD_EVIDENCE.md  PILOT_TEST_MATRIX.md  TLBSS_TITOS_Formalization.tex  UBUNTU_WSL_SETUP.md  compliance_mapping.md
mvre_core_deterministic/: Cargo.toml
mvre_core_deterministic/src/: lib.rs
phase_ii/: capability_traceability_matrix.md  independent_reproduction_report.md  invariant_register.md  phase_ii_determinism_report.md  readiness_assessment.md  verifier_failure_matrix.md
phase_ii/adversarial/: invalid_prev_hash.json  invalid_signature.json  missing_prev_hash.json  missing_signature.json  prefixed_invalid.json  stale_timestamp.json  truncated.json
phase_ii/compliance/: CLAIM_TRACEABILITY_MATRIX.md  EVIDENCE_INDEX.md  EVIDENCE_REBUILD_GRAPH.md  INVARIANT_RESOLUTION_MATRIX.md
phase_ii/determinism/: pilot_attestation_log_run_2.json
phase_ii/evidence/: pilot_attestation_log.json
phase_iii/: AUDIT_CHECKLIST.md  CLAIM_TRACEABILITY_MATRIX.md  ENFORCEMENT_CLI_DOCS.md  ENFORCEMENT_REPORT.md  EVIDENCE_INDEX.md  EXIT_CRITERIA.md  IMPLEMENTATION_SUMMARY.md  INDEX.md  OPEN_INVARIANTS.md  PHASE_III_CHARTER.md  RESOLUTION_LOOP_SPEC.md  REVIEWER_START.md  TASKS.md  enforcement_patch.diff
scripts/: mirror_evidence.sh
src/: adversarial_harness.rs  ai_ingestion_buffer.rs  audit_guardian.rs  canonical_time.rs  compliance.rs  constraint_system.rs  crypto_pipeline.rs  demo_pipeline.rs  deployment_manifest.rs  evidence_repository.rs  failure_axis.rs  fiel.rs  grid_code_templates.rs  hal_output.rs  interface_discovery.rs  ir_backends.rs  ir_codegen.rs  ise.rs  kernel.rs  lib.rs  mvre_kernel.rs  operator_interface.rs  phase_control.rs  protocol_drivers.rs  ptp_compliance.rs  recovery.rs  regulatory_policy.rs  reliability_controls.rs  sced_offer_chain.rs  scheduler.rs  sdtq_boundary.rs  sensor_attestation.rs  setpoint_guard.rs  simulation.rs  simulation_harness_core.rs  sovereign_bus.rs  sovereign_diagnostic.rs  sovereign_kernel.rs  sovereign_trace.rs  telemetry.rs  (+6 more)
src/canonical_core/: canonicalize.rs  hash.rs  mod.rs  serialize.rs  sort.rs
src/drivers/: mod.rs  ptp_clock.rs
src/economics/: shadow_prices.rs
tests/: adversarial_validation.rs  generated.rs  ise_harness_integration.rs  sdtq_boundary_enforcement.rs
third_party_licenses/: Apache-2.0.txt  BSD-3-Clause.txt  MIT.txt
(+16 files in other folders)
