[package]
name = "m_v_r_esprint1"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1"
csv = "1"
serde = { version = "1", features = ["derive"] }
sha2 = "0.10"
hex = "0.4"
ed25519-dalek = "2.0"
tempfile = "3.8"
core_affinity = "0.8"
tss-esapi = { version = "7.6.0", optional = true }
serde_json = "1.0"
axum = "0.7"
tokio = { version = "1", features = ["full"] }
quick-xml = "0.38"
zip = "0.6"
bincode = "1.3"
base64 = "0.22"

[features]
default = []
tpm = ["dep:tss-esapi"]
