[package]
name = "verification_engine"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rts_invariants = { path = "../rts_invariants" }
kani_bindings = { path = "../kani_bindings" }

[build-dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[lib]
path = "src/lib.rs"

[[bin]]
name = "verification_engine"
path = "src/main.rs"
